tests/negative/MicroJuvix/ExpectedFunctionType.mjuvix
module ExpectedFunctionType;
  inductive A {
    a : A;
  };

  inductive B {
    b : B;
  };

  f : A;
  f ≔ a b;
end;
